Add lua & oxygenated card

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="startup">
             <button id="startupskip" onclick="skipStartup();">>></button>
-          <div id="startuptext"></div>
+            <div id="startuptext"></div>
         </div>
         <div class="started">
             <div class="hero">
@@ -23,33 +23,67 @@
             <section class="main container">
                 <h2>> About Me</h2>
                 <p>
-                    Hey! Welcome to my... what is it? A portfolio website, I guess. I'm Aarav Saini/GalacticNuclei, a <span id="age"></span> year old frontend, backend (and more) developer. I guess that's called a full stack developer? But I don't feel like I'm a full stack developer, lol.<br>
+                    Hey! Welcome to my... what is it? A portfolio website, I
+                    guess. I'm Aarav Saini/GalacticNuclei, a
+                    <span id="age"></span> year old frontend, backend (and more)
+                    developer. I guess that's called a full stack developer? But
+                    I don't feel like I'm a full stack developer, lol.<br />
                     <br />
                     <br />
                     > <b>Stack</b><br />
                     My current stack is:
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript (Vanilla)</li>
-                        <li>Node.js</li>
-                        <li>React.js</li>
-                        <li>Discord bot development</li>
-                        <li>Java (Minecraft Modding and plugin development)</li>
-                        <li>Minecraft Datapack development</li>
-                    </ul>
-                    <br />
-                    <br />
-                    > <b>Contact</b><br />
-                    I'm not gonna give you my mail, because I don't even check it (lol). But here's my Discord:
-                    <span class="obfuscate"><b>galacticnuclei</b></span> [hover over it, or tap if you're on a mobile device.]
                 </p>
+
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript (Vanilla)</li>
+                    <li>Node.js</li>
+                    <li>React.js</li>
+                    <li>Discord bot development</li>
+                    <li>Java (Minecraft plugin development)</li>
+                    <li>Minecraft Datapack development</li>
+                    <li>LUA (Roblox Scripting)</li>
+                </ul>
+                <br />
+                <br />
+                > <b>Contact</b><br />
+                I'm not gonna give you my mail, because I don't even check it
+                (lol). But here's my Discord:
+                <span class="obfuscate"><b>galacticnuclei</b></span> [hover over
+                it, or tap if you're on a mobile device.]
                 <br /><br /><br /><br />
                 <h2>> Works</h2>
-                <p>
-                    Bro, what did you expect 💀<br />I'm 13, I obviously don't
-                    have any works yet 🗿
-                </p>
+                <div class="work-card">
+                    <img
+                        class="work-img"
+                        src="media/oxygenated.png"
+                        alt="Oxygenated Logo" />
+                    <h3 class="work-title">Oxygenated</h3>
+                    <p class="work-desc">
+                        A minecraft plugin to make your server easy to manage.
+                    </p>
+                    <a
+                        class="work-link"
+                        href="https://github.com/aarav-saini/Oxygenated"
+                        target="_blank">
+                        Github
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="new-tab-icon">
+                            <path
+                                d="M18 13v6a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
+                            <polyline points="15 3 21 3 21 9" />
+                            <line x1="10" y1="14" x2="21" y2="3" />
+                        </svg>
+                    </a>
+                </div>
             </section>
         </div>
         <script src="script.js"></script>
