--- a/about/index.html
+++ b/about/index.html
@@ -9,9 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
-    <title>Basic Template</title>
+    <title>Aarav Saini – About</title>
   </head>
-
   <svg id="filters">
     <defs>
       <filter id="noise">
@@ -63,7 +62,6 @@
       </filter>
     </defs>
   </svg>
-
   <body>
     <div class="navbar">
       <div class="navbarInner">
@@ -71,16 +69,13 @@
           <a href="/?skipIntro=true">Home</a>
           <a href="/about">About</a>
         </div>
-
-        <div class="navCenter" id="navTitle"></div>
-
+        <div class="navCenter" id="navTitle">Aarav Saini</div>
         <div class="navSide navRight">
           <a href="/works">Works</a>
-          <a href="#contact">Contact</a>
+          <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
-
     <div class="header">
       <h1 class="t">About Me</h1>
     </div>
@@ -88,7 +83,7 @@
       <h1>
         I'm Aarav Saini, or as most of you might know me – GalacticNuclei. I'm a
         14 year old fullstack developer.<br />
-        I got into coding at the age of 9 duing the pandemic (guess everyone had
+        I got into coding at the age of 9 during the pandemic (guess everyone had
         the same time, huh?).<br /><br>
         At this point, it's more than a hobby. It's a career I intend to pursue.<br>
         Currently, my skillset lands at:
