--- a/contact/index.html
+++ b/contact/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="/static/shared.css" />
-    <link rel="stylesheet" href="/static/works/works.css" />
+    <link rel="stylesheet" href="/static/contact/contact.css" />
     <script src="/static/shared.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
-    <title>Aarav Saini – Works</title>
+    <title>Aarav Saini – Contact</title>
   </head>
   <svg id="filters">
     <defs>
@@ -77,34 +77,11 @@
       </div>
     </div>
     <div class="header">
-      <h1 class="t">Works</h1>
+      <h1 class="t">Contact Me</h1>
     </div>
     <div class="content">
-      <div class="marquee">
-        <div class="marqueeTrack">
-          <div class="workCard" data-modal="project1">
-            <img src="/media/oxygenated.png" />
-            <div class="info">Oxygenated</div>
-          </div>
-          <div class="workCard" data-modal="project2">
-            <img src="/media/shadow.png" />
-            <div class="info">Shadow</div>
-          </div>
-        </div>
-      </div>
-      <div class="modalTemplates">
-        <div class="modalItem" data-modal="project1">
-          <h1 class="title">Oxygenated</h1>
-          <p>A server management plugin for Minecraft servers. Made as a fun little side project. Doesn't really see updates anymore.</p>
-        <a href="https://github.com/aarav-saini/Oxygenated" target="_blank">Github</a>
-        </div>
-        <div class="modalItem" data-modal="project2">
-          <h1 class="title">Shadow</h1>
-          <p>A portfolio for a Roblox/Web/UI UX developer friend. Not a big project.</p>
-          <a href="https://shadow.developer.li" target="_blank">Link</a>
-        </div>
-      </div>
+      <h1>You can *try* to contact me on anything but Discord and fail miserably as I am very inactive. So, I recommend you add me on DISCORD.<br><br><a class=discordurl href="https://discord.com/users/1271503266496249930">Discord Link</a><br><br>Or, you can add my username <code>galacticnuclei</code>.</h1>
     </div>
-    <script src="/static/works/works.js"></script>
+    <script src="/static/contact/contact.js"></script>
   </body>
 </html>
