--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
           <a href="/?skipIntro=true">Home</a>
           <a href="/about">About</a>
         </div>
-
         <div class="navCenter" id="navTitle"></div>
-
         <div class="navSide navRight">
           <a href="/works">Works</a>
-          <a href="#contact">Contact</a>
+          <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
-
     <svg id="filters">
       <defs>
         <filter id="noise">
