--- a/contact/index.html
+++ b/contact/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./static/shared.css" />
-    <link rel="stylesheet" href="./static/contact/contact.css" />
-    <script src="./static/shared.js"></script>
+    <link rel="stylesheet" href="/static/shared.css" />
+    <link rel="stylesheet" href="/static/contact/contact.css" />
+    <script src="/static/shared.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
@@ -66,13 +66,13 @@
     <div class="navbar">
       <div class="navbarInner">
         <div class="navSide navLeft">
-          <a href="./?skipIntro=true">Home</a>
-          <a href="./about">About</a>
+          <a href="/?skipIntro=true">Home</a>
+          <a href="/about">About</a>
         </div>
         <div class="navCenter" id="navTitle">Aarav Saini</div>
         <div class="navSide navRight">
-          <a href="./works">Works</a>
-          <a href="./contact">Contact</a>
+          <a href="/works">Works</a>
+          <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
@@ -80,8 +80,15 @@
       <h1 class="t">Contact Me</h1>
     </div>
     <div class="content">
-      <h1>You can *try* to contact me on anything but Discord and fail miserably as I am very inactive. So, I recommend you add me on DISCORD.<br><br><a class=discordurl href="https://discord.com/users/1271503266496249930">Discord Link</a><br><br>Or, you can add my username <code>galacticnuclei</code>.</h1>
+      <h1>
+        You can *try* to contact me on anything but Discord and fail miserably
+        as I am very inactive. So, I recommend you add me on DISCORD.<br /><br /><a
+          class="discordurl"
+          href="https://discord.com/users/1271503266496249930"
+          >Discord Link</a
+        ><br /><br />Or, you can add my username <code>galacticnuclei</code>.
+      </h1>
     </div>
-    <script src="./static/contact/contact.js"></script>
+    <script src="/static/contact/contact.js"></script>
   </body>
 </html>
