--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Aarav Saini</title>
-    <link rel="stylesheet" href="./static/index/index.css" />
-    <link rel="stylesheet" href="./static/shared.css" />
-    <script src="./static/shared.js"></script>
+    <link rel="stylesheet" href="/static/index/index.css" />
+    <link rel="stylesheet" href="/static/shared.css" />
+    <script src="/static/shared.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
@@ -15,13 +15,13 @@
     <div class="navbar">
       <div class="navbarInner">
         <div class="navSide navLeft">
-          <a href="./?skipIntro=true">Home</a>
-          <a href="./about">About</a>
+          <a href="/?skipIntro=true">Home</a>
+          <a href="/about">About</a>
         </div>
         <div class="navCenter" id="navTitle"></div>
         <div class="navSide navRight">
-          <a href="./works">Works</a>
-          <a href="./contact">Contact</a>
+          <a href="/works">Works</a>
+          <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
@@ -88,10 +88,10 @@
     </div>
     <div class="hero" id="home">
       <video autoplay muted loop playsinline id="heroVideo">
-        <source src="./media/taotajima.mp4" type="video/mp4" />
+        <source src="/media/taotajima.mp4" type="video/mp4" />
       </video>
       <h1 class="t" id="nameTitle">Aarav Saini</h1>
     </div>
-    <script src="./static/index/index.js"></script>
+    <script src="/static/index/index.js"></script>
   </body>
 </html>
