--- a/works/index.html
+++ b/works/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./static/shared.css" />
-    <link rel="stylesheet" href="./static/works/works.css" />
-    <script src="./static/shared.js"></script>
+    <link rel="stylesheet" href="/static/shared.css" />
+    <link rel="stylesheet" href="/static/works/works.css" />
+    <script src="/static/shared.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
@@ -66,13 +66,13 @@
     <div class="navbar">
       <div class="navbarInner">
         <div class="navSide navLeft">
-          <a href="./?skipIntro=true">Home</a>
-          <a href="./about">About</a>
+          <a href="/?skipIntro=true">Home</a>
+          <a href="/about">About</a>
         </div>
         <div class="navCenter" id="navTitle">Aarav Saini</div>
         <div class="navSide navRight">
-          <a href="./works">Works</a>
-          <a href="./contact">Contact</a>
+          <a href="/works">Works</a>
+          <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
@@ -83,11 +83,11 @@
       <div class="marquee">
         <div class="marqueeTrack">
           <div class="workCard" data-modal="project1">
-            <img src="./media/oxygenated.png" />
+            <img src="/media/oxygenated.png" />
             <div class="info">Oxygenated</div>
           </div>
           <div class="workCard" data-modal="project2">
-            <img src="./media/shadow.png" />
+            <img src="/media/shadow.png" />
             <div class="info">Shadow</div>
           </div>
         </div>
@@ -95,16 +95,24 @@
       <div class="modalTemplates">
         <div class="modalItem" data-modal="project1">
           <h1 class="title">Oxygenated</h1>
-          <p>A server management plugin for Minecraft servers. Made as a fun little side project. Doesn't really see updates anymore.</p>
-        <a href="https://github.com/aarav-saini/Oxygenated" target="_blank">Github</a>
+          <p>
+            A server management plugin for Minecraft servers. Made as a fun
+            little side project. Doesn't really see updates anymore.
+          </p>
+          <a href="https://github.com/aarav-saini/Oxygenated" target="_blank"
+            >Github</a
+          >
         </div>
         <div class="modalItem" data-modal="project2">
           <h1 class="title">Shadow</h1>
-          <p>A portfolio for a Roblox/Web/UI UX developer friend. Not a big project.</p>
+          <p>
+            A portfolio for a Roblox/Web/UI UX developer friend. Not a big
+            project.
+          </p>
           <a href="https://shadow.developer.li" target="_blank">Link</a>
         </div>
       </div>
     </div>
-    <script src="./static/works/works.js"></script>
+    <script src="/static/works/works.js"></script>
   </body>
 </html>
