--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="/static/shared.css" />
     <link rel="stylesheet" href="/static/about/about.css" />
-    <script src="/static/shared.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.15/dist/lenis.min.js"></script>
@@ -70,12 +69,24 @@
           <a href="/about">About</a>
         </div>
         <div class="navCenter" id="navTitle">Aarav Saini</div>
+        <button class="hamburger" aria-label="menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <div class="navSide navRight">
           <a href="/works">Works</a>
           <a href="/contact">Contact</a>
         </div>
       </div>
     </div>
+    <div class="navlinksMobile">
+      <a href="/?skipIntro=true">Home</a>
+      <a href="/about">About</a>
+      <a href="/works">Works</a>
+      <a href="/contact">Contact</a>
+    </div>
+
     <div class="header">
       <h1 class="t">About Me</h1>
     </div>
@@ -100,5 +111,6 @@
       </h1>
     </div>
     <script src="/static/about/about.js"></script>
+    <script src="/static/shared.js"></script> 
   </body>
 </html>
