Adjust works page for mobile

--- a/works/index.html
+++ b/works/index.html
@@ -123,6 +123,30 @@
         </div>
       </div>
     </div>
+    <div class="worksMobile">
+      <article class="workCardMobile">
+        <img src="/media/oxygenated.png" />
+        <h2>Oxygenated</h2>
+        <p>
+          A server management plugin for Minecraft servers. Made as a fun little
+          side project. Doesn't really see updates anymore.
+        </p>
+        <a href="https://github.com/aarav-saini/Oxygenated" target="_blank">
+          Github
+        </a>
+      </article>
+
+      <article class="workCardMobile">
+        <img src="/media/shadow.png" />
+        <h2>Shadow</h2>
+        <p>
+          A portfolio for a Roblox/Web/UI UX developer friend. Not a big
+          project.
+        </p>
+        <a href="https://shadow.developer.li" target="_blank"> Visit </a>
+      </article>
+    </div>
+
     <script src="/static/works/works.js"></script>
     <script src="/static/shared.js"></script>
   </body>
